auth in progress, Front calling left

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -4,3 +4,10 @@ DB_HOST=localhost
 DB_USER=notroot
 DB_PASSWORD=helloworld
 DB_NAME=mvc_express
+
+# JWT options
+JWT_SECRET =
+JWT_TIMING = 60m // 1h, 60s, 4d, u choose
+
+# Upload Directory
+AVATAR_DIRECTORY=public/uploads/
