--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "axios": "^1.2.2",
     "jwt-decode": "^3.1.2",
-    "moment": "^2.29.4",
+    "luxon": "^3.2.1",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
