cap rover branch corrected

--- a/workflows/deploy-front.yml
+++ b/workflows/deploy-front.yml
@@ -24,4 +24,4 @@ jobs:
         run: npm install -g caprover
 
       - name: Caprover Deploy
-        run: caprover deploy -h "${{ secrets.CAPROVER_SERVER }}" -p '${{ secrets.CAPROVER_PASSWORD }}' -b 'dev' -a "${{ secrets.CAPROVER_FRONT_APPNAME }}"
+        run: caprover deploy -h "${{ secrets.CAPROVER_SERVER }}" -p '${{ secrets.CAPROVER_PASSWORD }}' -b 'main' -a "${{ secrets.CAPROVER_FRONT_APPNAME }}"
