auth, post by id

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -7,7 +7,8 @@ DB_NAME=mvc_express
 
 # JWT options
 JWT_SECRET =
-JWT_TIMING = 60m // 1h, 60s, 4d, u choose
+# Expiration timing 1h, 50s, 10m, u choose
+JWT_TIMING = 10m
 
 # Upload Directory
 AVATAR_DIRECTORY=public/uploads/
