--- a/backend/package.json
+++ b/backend/package.json
@@ -15,9 +15,11 @@
   "license": "ISC",
   "dependencies": {
     "argon2": "^0.30.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "http-proxy-middleware": "^2.0.6",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^2.3.3",
     "template-fullstack": "file:.."
